k8s/ngrok.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngrok
  namespace: default
  labels:
    app: ngrok
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngrok
  template:
    metadata:
      labels:
        app: ngrok
    spec:
      containers:
        - name: ngrok
          image: ngrok/ngrok:latest
          args:
            - "http"
            - "my-app-service:80"
          ports:
            - containerPort: 4040
